k8s/microservices/customers-app-worker.yaml
kind: Pod
apiVersion: v1
metadata:
  name: customers-app-worker
  labels:
    app: customers-worker
spec:
  containers:
    - name: customers-app-worker
      image: gnm3000/customers_microservice_worker:latest
      imagePullPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: customers-service-worker
spec:
  selector:
    app: customers-worker
  ports:
    - port: 5678 # Default port for image
