k8s/microservices/customers-app.yaml
kind: Pod
apiVersion: v1
metadata:
  name: customers-app
  labels:
    app: customers
spec:
  containers:
    - name: customers-app
      image: gnm3000/customers_microservice:latest
      imagePullPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: customers-service
spec:
  selector:
    app: customers
  ports:
    - port: 5678 # Default port for image
