k8s/microservices/reporting-app.yaml
kind: Pod
apiVersion: v1
metadata:
  name: reporting-app
  labels:
    app: reporting
spec:
  containers:
    - name: reporting-app
      image: gnm3000/reporting_microservice:latest
      imagePullPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: reporting-service
spec:
  selector:
    app: reporting
  ports:
    - port: 5678 # Default port for image
