k8s/microservices/sales-app-worker.yaml
kind: Pod
apiVersion: v1
metadata:
  name: sales-app-worker
  labels:
    app: sales-worker
spec:
  containers:
    - name: sales-app-worker
      image: gnm3000/sales_microservice_worker:latest
      imagePullPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: sales-service-worker
spec:
  selector:
    app: sales-worker
  ports:
    - port: 5678 # Default port for image
