k8s/microservices/sales-app.yaml
kind: Pod
apiVersion: v1
metadata:
  name: sales-app
  labels:
    app: sales
spec:
  containers:
    - name: sales-app
      image: gnm3000/sales_microservice:latest
      imagePullPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: sales-service
spec:
  selector:
    app: sales
  ports:
    - port: 5678 # Default port for image
