k8s/microservices/shipping-app-worker.yaml
kind: Pod
apiVersion: v1
metadata:
  name: shipping-app-worker
  labels:
    app: shipping-worker
spec:
  containers:
    - name: shipping-app-worker
      image: gnm3000/shipping_microservice_worker:latest
      imagePullPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: shipping-service-worker
spec:
  selector:
    app: shipping-worker
  ports:
    - port: 5678 # Default port for image
