k8s/microservices/shipping-app.yaml
kind: Pod
apiVersion: v1
metadata:
  name: shipping-app
  labels:
    app: shipping
spec:
  containers:
    - name: shipping-app
      image: gnm3000/shipping_microservice:latest
      imagePullPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: shipping-service
spec:
  selector:
    app: shipping
  ports:
    - port: 5678 # Default port for image
